--- a/src/client/app/modules/main/components/pages/paymentcard/paymentcard.component.html
+++ b/src/client/app/modules/main/components/pages/paymentcard/paymentcard.component.html
@@ -4,7 +4,7 @@
             <div class="col-12 col-md-4">
                 <div class="sticky-top">
                     <div class="mb-md-3">
-                        <app-navigation></app-navigation>
+                        <app-navigation [products]="products"></app-navigation>
                     </div>
                     <div class="d-none d-md-block">
                         <app-purchase-reservation></app-purchase-reservation>
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-8">
-                <div class="mb-3 d-md-none">
+                <div class="mb-4 d-md-none">
                     <app-purchase-reservation></app-purchase-reservation>
                 </div>
                 <div class="mb-4">
