### Changed - ポイントカード詳細情報変更 - サーバータイム取得キャッシュ対応

--- a/src/client/app/modules/shared/components/parts/navigation/navigation.component.html
+++ b/src/client/app/modules/shared/components/parts/navigation/navigation.component.html
@@ -15,7 +15,7 @@
     </li>
 </ul>
 
-<div *ngIf="products" class="bg-white fixed-bottom d-md-none navigation-sp">
+<div *ngIf="products" class="bg-white border-top fixed-bottom d-md-none navigation-sp">
     <div class="container px-2 h-100">
         <ul class="row p-0 text-small mb-0 h-100 text-black-50 fw-bold">
             <li class="col-4 pointer border-end" [ngClass]="{ 
